--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <img class="cursor" src="https://code.s3.yandex.net/web-code/cursor.gif">
 </div>
 
-<p class="footer">© 2020 Сделал Yoruba для Пупсика</p>
+<p class="footer">© 2020 Сделяль Yoruba для Пупсика</p>
 
 <script src="https://code.s3.yandex.net/web-code/smoothly.js"></script>
 <script src="script.js"></script>
